--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "startCommand": "npm start"
   },
   "scripts": {
-    "build": "sass --style=compressed --embed-sources --no-error-css scss:styles",
+    "build": "npm-run-all css-build css-prefix",
     "css-compile": "sass --embed-sources --no-error-css scss:styles",
+    "css-build": "sass --style=compressed --embed-sources --no-error-css scss:styles",
+    "css-prefix": "postcss --replace styles/style.css --use autoprefixer --map",
     "watch": "sass --watch --embed-sources --no-error-css scss:styles"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.0"
+    "autoprefixer": "^10.4.14",
+    "bootstrap": "^5.3.0",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.24",
+    "postcss-cli": "^10.1.0"
   }
 }
